src/test/resources/valid_programs/precedences__comparison_higher_than_boolean.notc
void main() {
    printInt(false && false == false);
    printInt(false && true != true);
    printInt(true || false == false);
    printInt(true || true != true);
}
