src/test/resources/semantic_errors/while_bool_and_string.notc
void main() {
    string s = "jklk";
    while (true && s) {
    }
}
